# pycliche

./: .copier-answers.yml  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  copier.yaml  deno.json  justfile  noxfile.py  prek.toml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: _checks.yaml  ci.yaml  pr.yaml  release-please.yaml
docs/: README-dev.md
template/: .gitignore  .markdownlint-cli2.yaml.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .typos.toml  LICENSE  README.md.jinja  noxfile.py  noxfile.py.jinja  prek.toml.jinja  pyproject.toml.jinja
template/src/{{project_name}}/: __init__.py.jinja  log_config.py  main.py.jinja
template/tests/: conftest.py.jinja  test_{{project_name}}.py.jinja
template/{%if is_github_project%}.github{%endif%}/: dependabot.yaml
template/{%if is_github_project%}.github{%endif%}/actions/prek/: action.yaml
template/{%if is_github_project%}.github{%endif%}/actions/test/: action.yaml
template/{%if is_github_project%}.github{%endif%}/workflows/: _checks.yaml  ci.yaml  ci.yaml.jinja  pr.yaml  release-please.yaml
template/{{project_name}}/: log_config.py  main.py.jinja
tests/: conftest.py  test_generate_from_template.py  test_post_copy_tasks.py  test_validators.py
