[project]
name = "pycliche"
version = "2.27.0"
description = ""
authors = [
    {name = "Alberto Morón Hernández", email = "alberto.moronh@gmail.com"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.7.0,<10.0.0",
    "structlog>=25.5.0,<26.0.0",
]

[dependency-groups]
test = [
    "copier>=9.11.0,<10.0.0",
    "pip>=26.0.1,<27.0.0",
    "prek>=0.3.2,<0.4.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-randomly>=4.0.1,<5.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "sh>=2.2.2,<3.0.0",
]

[project.urls]
Changelog = "https://github.com/albertomh/pycliche/blob/main/CHANGELOG.md"
Repository = "https://github.com/albertomh/pycliche"

[tool.pytest]
addopts = ["--pdbcls=IPython.terminal.debugger:Pdb"]
markers = [
    "integration",
    "slow",
    "smoke",
    "unit",
]

[tool.ruff]
exclude = [".pdbrc"]
extend-exclude = ["*project_name*"]
force-exclude = true
indent-width = 4
line-length = 90
target-version = "py314"

[tool.ruff.lint]
ignore = []
select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "E",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # Pyflakes
    "F",
    #flake8-logging-format
    "G",
    # flake8-logging
    "LOG",
    # flake8-pytest-style
    "PT",
    # flake8-bandit
    "S",
    # flake8-tidy-imports
    "TID",
    # flake8-print
    "T20",
    # pycodestyle warnings
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]
